--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-streamlit==1.36.0
-pandas==2.2.2
-sqlalchemy==2.0.30
-plotly==5.23.0
-python-dotenv==1.0.1
-streamlit-authenticator==0.3.2
-bcrypt==4.1.3
+streamlit
+pandas
+plotly
+bcrypt
+streamlit-authenticator
+sqlalchemy
